[package]
name = "miko"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Filip Pobořil <dev@fpob.cz>"]

[dependencies]
aes = "0.8.4"
anyhow = "1.0.86"
block-padding = "0.3.3"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["cargo", "derive", "env", "wrap_help"] }
clap_complete = "4.5.38"
colored = "2.1.0"
confy = "0.6.1"
ed2k = "1.0.1"
flate2 = "1.0.30"
inquire = "0.7.5"
itertools = "0.13.0"
md5 = "0.7.0"
regex = "1.10.5"
serde = { version = "1.0.210", features = ["derive"] }
subst = "0.3.5"
thiserror = "1.0.64"
